# llm-wiki

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  release-please-config.json
.claude/: staleness-warnings.jsonl
.claude/skills/: cli-for-agents.md
.github/workflows/: ci.yml  notify-mono.yml  release.yml
crates/lw-cli/: Cargo.toml
crates/lw-cli/src/: backlinks.rs  capture.rs  config.rs  doctor.rs  git_commit.rs  import.rs  ingest.rs  init.rs  install_prefix.rs  integrate.rs  lint.rs  main.rs  new.rs  output.rs  query.rs  read.rs  serve.rs  status.rs  sync.rs  templates.rs  uninstall.rs  upgrade.rs  version_file.rs  workspace.rs  write.rs
crates/lw-cli/src/integrations/: descriptor.rs  mcp.rs  mod.rs  skills.rs
crates/lw-cli/tests/: backlinks_test.rs  capture_test.rs  cli_test.rs  doctor_cli.rs  git_autocommit_cli.rs  hyphen_values_test.rs  integrate_cli.rs  lint_cli.rs  new_test.rs  workspace_cli.rs
crates/lw-core/: Cargo.toml
crates/lw-core/src/: aliases.rs  backlinks.rs  error.rs  fs.rs  git.rs  import.rs  ingest.rs  journal.rs  lib.rs  link.rs  lint.rs  llm.rs  mentions.rs  page.rs  schema.rs  search.rs  section.rs  status.rs  tag.rs
crates/lw-core/tests/: aliases_test.rs  backlinks_test.rs  concurrent_test.rs  dogfood_test.rs  frontmatter_query_test.rs  fs_security_test.rs  fs_test.rs  git_test.rs  import_test.rs  ingest_test.rs  journal_test.rs  link_test.rs  lint_test.rs  llm_test.rs  mentions_test.rs  new_page_test.rs  page_related_test.rs  page_test.rs  schema_test.rs  search_test.rs  starter_templates_smoke_test.rs  status_test.rs  tag_test.rs
crates/lw-core/tests/common/: mod.rs
crates/lw-mcp/: Cargo.toml
crates/lw-mcp/src/: lib.rs
crates/lw-mcp/tests/: serve_startup_no_rebuild.rs  wiki_write_section.rs
docs/: MIGRATION.md  README.md
docs/plans/: 2026-04-20-wrapper-plan-a-workspace.md  2026-04-20-wrapper-plan-b-skills-integrations.md  2026-04-20-wrapper-plan-c-installer.md  2026-04-20-wrapper-plan-d-doctor-1.0-gate.md
docs/smoke-tests/v0.2.0-rc.1/: SUMMARY.md
docs/smoke-tests/v0.2.0-rc.2/: SUMMARY.md  case-1-in-scope.md  case-2-out-of-scope.md
docs/specs/: 2026-04-19-product-wrapper-design.md
docs/superpowers/plans/: 2026-04-06-llm-wiki-phase1.md  2026-04-13-wiki-write-section-ops.md
docs/superpowers/specs/: 2026-04-06-llm-wiki-design.md  2026-04-13-wiki-write-section-ops-design.md
installer/: Dockerfile.test-linux  install.sh  test-install.sh  test-uninstall-isolation.sh  uninstall.sh
installer/tests/: integrate_gate_test.sh  swap_test.sh
integrations/: claude-code.toml  codex.toml  kimi.toml  openclaw.toml
scripts/agents/: classifier-prompt.md  classifier.sh  cleanup-classified.sh  librarian.sh  mcp-config.json
scripts/cron/: daily-ingest.sh  weekly-lint.sh
skills/llm-wiki-import/: SKILL.md
skills/llm-wiki-knowledge-capture/: SKILL.md
templates/engineering-notes/: .gitignore  SCOPE.md
templates/engineering-notes/.lw/: schema.toml
templates/general/: .gitignore  SCOPE.md
templates/research-papers/: SCOPE.md
(+5 files in other folders)
