[package]
name = "lw-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lw"
path = "src/main.rs"

[dependencies]
lw-core = { workspace = true }
lw-mcp = { workspace = true }
clap = { version = "4.6", features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
