[package]
name = "lw-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lw"
path = "src/main.rs"

[dependencies]
lw-core = { workspace = true }
lw-mcp = { workspace = true }
clap = { version = "4.6", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
ureq = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
