[package]
name = "lw-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "1.1"
serde_yml = "0.0.12"
gray_matter = "0.3"
tantivy = "0.26"
regex = "1"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
