[package]
name = "lw-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "1.1"
serde_yml = "0.0.12"
gray_matter = "0.3"
tantivy = "0.26"
tantivy-jieba = "0.19"
regex = "1"
tracing = { workspace = true }
comrak = { version = "0.36", default-features = false }
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
time = { version = "0.3", features = ["formatting", "macros"] }
