[package]
name = "lw-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
lw-core = { workspace = true }
rmcp = { version = "1.3", features = ["server", "macros", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
